@@ -34,9 +34,13 @@ public partial class MainWindow {
     
     private Gtk.ToggleAction ShowErrors;
     
+    private Gtk.Action Refresh;
+    
     private Gtk.VBox vbox1;
     
     private Gtk.MenuBar menubar1;
+    
+    private Gtk.Toolbar toolbar3;
     
     private Gtk.Notebook notebook1;
     
@@ -96,6 +100,9 @@ public partial class MainWindow {
         this.ShowErrors.Active = true;
         this.ShowErrors.ShortLabel = Mono.Unix.Catalog.GetString("Show errors");
         w2.Add(this.ShowErrors, null);
+        this.Refresh = new Gtk.Action("Refresh", Mono.Unix.Catalog.GetString("Refresh"), null, "gtk-refresh");
+        this.Refresh.ShortLabel = Mono.Unix.Catalog.GetString("Refresh");
+        w2.Add(this.Refresh, "<Control>r");
         w1.InsertActionGroup(w2, 0);
         this.AddAccelGroup(w1.AccelGroup);
         this.Name = "MainWindow";
@@ -106,7 +113,7 @@ public partial class MainWindow {
         this.vbox1.Name = "vbox1";
         this.vbox1.Spacing = 6;
         // Container child vbox1.Gtk.Box+BoxChild
-        w1.AddUiFromString("<ui><menubar name='menubar1'><menu action='File'><menuitem action='quit'/></menu><menu action='Compare'><menuitem action='Custom'/><separator/></menu><menu action='View'><menuitem action='ShowMissing'/><menuitem action='ShowExtra'/><menuitem action='ShowPresent'/></menu></menubar></ui>");
+        w1.AddUiFromString("<ui><menubar name='menubar1'><menu action='File'><menuitem action='quit'/></menu><menu action='Compare'><menuitem action='Custom'/><separator/></menu><menu action='View'><menuitem action='ShowErrors'/><menuitem action='ShowMissing'/><menuitem action='ShowExtra'/><menuitem action='ShowPresent'/></menu></menubar></ui>");
         this.menubar1 = ((Gtk.MenuBar)(w1.GetWidget("/menubar1")));
         this.menubar1.Name = "menubar1";
         this.vbox1.Add(this.menubar1);
@@ -114,6 +121,17 @@ public partial class MainWindow {
         w3.Position = 0;
         w3.Expand = false;
         w3.Fill = false;
+        // Container child vbox1.Gtk.Box+BoxChild
+        w1.AddUiFromString("<ui><toolbar name='toolbar3'><toolitem action='Refresh'/></toolbar></ui>");
+        this.toolbar3 = ((Gtk.Toolbar)(w1.GetWidget("/toolbar3")));
+        this.toolbar3.Name = "toolbar3";
+        this.toolbar3.ShowArrow = false;
+        this.toolbar3.ToolbarStyle = ((Gtk.ToolbarStyle)(0));
+        this.vbox1.Add(this.toolbar3);
+        Gtk.Box.BoxChild w4 = ((Gtk.Box.BoxChild)(this.vbox1[this.toolbar3]));
+        w4.Position = 1;
+        w4.Expand = false;
+        w4.Fill = false;
         // Container child vbox1.Gtk.Box+BoxChild
         this.notebook1 = new Gtk.Notebook();
         this.notebook1.CanFocus = true;
@@ -146,8 +164,8 @@ public partial class MainWindow {
         this.label3.LabelProp = Mono.Unix.Catalog.GetString("This tool allows you to compare the API of assemblies.\n\nTo initiate a comparison, use the \"Compare\" menu and use one of the presets based on the assemblies you  have installed on your system and some popular profiles, or use \"Custom\" to define your own comparison");
         this.label3.Wrap = true;
         this.notebook1.Add(this.label3);
-        Gtk.Notebook.NotebookChild w6 = ((Gtk.Notebook.NotebookChild)(this.notebook1[this.label3]));
-        w6.Position = 1;
+        Gtk.Notebook.NotebookChild w7 = ((Gtk.Notebook.NotebookChild)(this.notebook1[this.label3]));
+        w7.Position = 1;
         // Notebook tab
         this.label2 = new Gtk.Label();
         this.label2.Name = "label2";
@@ -155,8 +173,8 @@ public partial class MainWindow {
         this.notebook1.SetTabLabel(this.label3, this.label2);
         this.label2.ShowAll();
         this.vbox1.Add(this.notebook1);
-        Gtk.Box.BoxChild w7 = ((Gtk.Box.BoxChild)(this.vbox1[this.notebook1]));
-        w7.Position = 1;
+        Gtk.Box.BoxChild w8 = ((Gtk.Box.BoxChild)(this.vbox1[this.notebook1]));
+        w8.Position = 2;
         // Container child vbox1.Gtk.Box+BoxChild
         this.statusbar1 = new Gtk.Statusbar();
         this.statusbar1.Name = "statusbar1";
@@ -165,13 +183,13 @@ public partial class MainWindow {
         this.progressbar1 = new Gtk.ProgressBar();
         this.progressbar1.Name = "progressbar1";
         this.statusbar1.Add(this.progressbar1);
-        Gtk.Box.BoxChild w8 = ((Gtk.Box.BoxChild)(this.statusbar1[this.progressbar1]));
-        w8.Position = 2;
-        this.vbox1.Add(this.statusbar1);
-        Gtk.Box.BoxChild w9 = ((Gtk.Box.BoxChild)(this.vbox1[this.statusbar1]));
+        Gtk.Box.BoxChild w9 = ((Gtk.Box.BoxChild)(this.statusbar1[this.progressbar1]));
         w9.Position = 2;
-        w9.Expand = false;
-        w9.Fill = false;
+        this.vbox1.Add(this.statusbar1);
+        Gtk.Box.BoxChild w10 = ((Gtk.Box.BoxChild)(this.vbox1[this.statusbar1]));
+        w10.Position = 3;
+        w10.Expand = false;
+        w10.Fill = false;
         this.Add(this.vbox1);
         if ((this.Child != null)) {
             this.Child.ShowAll();
@@ -185,5 +203,6 @@ public partial class MainWindow {
         this.ShowExtra.Toggled += new System.EventHandler(this.OnShowExtraToggled);
         this.ShowPresent.Toggled += new System.EventHandler(this.OnShowPresentToggled);
         this.ShowErrors.Toggled += new System.EventHandler(this.OnShowErrorsToggled);
+        this.Refresh.Activated += new System.EventHandler(this.OnRefreshActivated);
     }
 }
